# reception-camera

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  alembic.ini  install.py  install_windows.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test_macos_tts.py
app/: README.md  config.yaml  config_rb5.yaml  config_rpi.yaml  main.py  requirements.txt
app/audio/: tts.py
app/db/: schema.sql  storage.py
app/hardware/: __init__.py  audio_discovery.py  camera_discovery.py  detector.py
app/vision/: camera.py  embedder.py  events.py  face_detect.py  matcher.py  tracker.py
data/: backup.json
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: RB5_DEPLOYMENT.md
scripts/: benchmark.py  cleanup_old_data.py  deploy_rb5.sh  export_embeddings.py  seed_db.py  setup_edge_device.sh  setup_rb5.sh  validate.sh
src/: config.py  main.py
src/api/: app.py  schemas.py
src/camera/: capture.py  stream.py
src/database/: models.py  repository.py
src/detection/: face_detector.py  preprocessor.py
src/enrollment/: augmentation.py  enroll_service.py
src/greeting/: greeter.py  tts_engine.py
src/learning/: embedding_store.py  feedback_loop.py  incremental_trainer.py
src/notifications/: notifier.py
tests/: conftest.py  test_api_routes.py  test_capture.py  test_encoder.py  test_enroll_service.py  test_face_detector.py  test_greeter.py  test_incremental_trainer.py  test_matcher.py  test_privacy.py  test_repository.py  test_tts_pipeline.py
tools/: admin.py  download_models.py  enroll.py  export_db.py
(+21 files in other folders)
