[tool]
name = "reception-camera"
version = "1.2.0"
description = "Real-time face-recognition camera system that greets people by name when they arrive and says goodbye when they leave."
authors = ["Sudheer Ibrahim Daniel Devu <sudheerdevu4work@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
opencv-python = ">=4.8.0"
numpy = ">=1.24.0"
insightface = ">=0.7.3"
onnxruntime = ">=1.16.0"
scipy = ">=1.11.0"
pyttsx3 = ">=2.90"
PyYAML = ">=6.0"
Pillow = ">=10.0.0"
scikit-learn = ">=1.3.0"

[dev-dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
black = ">=23.0"
isort = ">=5.12"
mypy = ">=1.0"
flake8 = ">=6.0"